添加带有分布式锁的数据预热

--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,11 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.83</version>
         </dependency>
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.17.7</version>
+        </dependency>
     </dependencies>
 
     <build>
